# hackquest-soft

./: .gitignore  LICENSE  README.md  alembic.ini  config.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_18-36e2304b9782_init.py
data/: abi.json  db.sqlite3
src/: base.py  client.py  config.py  db.py  facade.py  menu.py  models.py  utils.py  vars.py  w3.py
